src/FinancialForce ClickLink/objects/IntegrationRuleButton__c.object
<CustomObject>
    <customHelpPage>helpintegrationrulebutton</customHelpPage>
    <fields>
        <fullName>DetailPageButton__c</fullName>
        <formula>IF( OR(ListObject__c==null,ListObject__c == &apos;&apos; ) ,

&apos;&lt;apex:page standardController=&quot;&apos; + IntegrationRule__r.SourceObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; action=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;convert&apos;+&apos;}&apos;+&apos;&quot;&gt;&apos;+ BR() +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() + &apos;&lt;/apex:page&gt;&apos;,

&apos;&lt;apex:page standardController=&quot;&apos; + ListObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; action=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;convert&apos;+&apos;}&apos;+&apos;&quot;&gt;&apos;+ BR() +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() + &apos;&lt;/apex:page&gt;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail Page Button</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationRule__c</fullName>
        <label>ClickLink Rule</label>
        <referenceTo>IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Buttons</relationshipLabel>
        <relationshipName>IntegrationRuleButtons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ListButton__c</fullName>
        <formula>IF( OR(ListObject__c==null,ListObject__c == &apos;&apos; ) ,

&apos;&lt;apex:page standardController=&quot;&apos; + IntegrationRule__r.SourceObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; action=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;convert&apos;+&apos;}&apos;+&apos;&quot; recordSetVar=&quot;records&quot;&gt;&apos; + BR() +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() +&apos;&lt;/apex:page&gt;&apos;,

&apos;&lt;apex:page standardController=&quot;&apos; + ListObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; action=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;convert&apos;+&apos;}&apos;+&apos;&quot; recordSetVar=&quot;records&quot;&gt;&apos; + BR() +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() +&apos;&lt;/apex:page&gt;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Button</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListObjectSourceIDField__c</fullName>
        <label>List Object Source ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListObject__c</fullName>
        <label>List Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualforcePage__c</fullName>
        <label>Visualforce Page</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>ClickLink Button</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>